Fix accessibility issues: box-sizing, link wrapping, bold links

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -7,7 +7,7 @@
 @import '@/assets/css/purdue-styles-ghc8hdz.css';
 
 * {
-  box-sizing: content-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -17,7 +17,7 @@ body {
 }
 
 a {
-  @apply text-secondary-color;
+  @apply text-secondary-color font-bold;
 }
 
 .dark {
