--- a/src/assets/css/vars.css
+++ b/src/assets/css/vars.css
@@ -2,7 +2,7 @@
   --color-primary: 0, 0, 0;
   --color-primary-content: 255, 255, 255;
 
-  --color-secondary: 14, 165, 233;
+  --color-secondary: 142, 111, 62; /* Purdue Aged Gold #8E6F3E */
   --color-secondary-content: 255, 255, 255;
 
   --color-success: 34, 197, 94;
@@ -35,7 +35,7 @@
   --color-primary: 23, 23, 23;
   --color-primary-content: 255, 255, 255;
 
-  --color-secondary: 14, 165, 233;
+  --color-secondary: 218, 170, 0; /* Purdue rush */
   --color-secondary-content: 255, 255, 255;
 
   --color-success: 22, 163, 74;
